--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,5 +4,11 @@ theme:
   name: material
   font:
     text: Monserrat
+  palette:
+      primary: teal
+      accent: cyan
+  
+  logo: assets/images/TxFlow_Geometric_Logo_Icon_White_on_Transparent.png
+
 
 copyright: Copyright &copy; 2023 Transformationflow OÜ (16248096), Estonia
