--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,8 @@ theme:
   name: material
   font:
     text: Monserrat
-
-  
+  palette:
+    primary: teal
+    accent: cyan
+    
 copyright: Copyright &copy; 2023 Transformationflow OÜ (16248096), Estonia
