--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,4 +11,4 @@ theme:
   favicon: assets/images/TxFlow_Geometric_Logo_Icon_100x100.png
 
 
-copyright: Copyright &copy; 2023 Transformationflow OÜ (16248096), Estonia
+copyright: Copyright &copy; 2023 Transformationflow OÜ (16248096), Estonia. EU.
