--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,5 +7,6 @@ theme:
   palette:
     primary: teal
     accent: cyan
+  logo: assets/images/TxFlow_Geometric_Logo_Icon_White_on_Transparent.png
 
 copyright: Copyright &copy; 2023 Transformationflow OÜ (16248096), Estonia. EU.
