--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,4 +15,4 @@ extra:
     provider: google
     property: G-CKZS1MWV4V
 
-copyright: Copyright &copy; 2023 Transformationflow OÜ (16248096), Estonia. EU.
+copyright: Copyright &copy; 2023 Transformationflow OÜ (16248096), Estonia.
