--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,8 +7,8 @@ theme:
   palette:
     primary: teal
     accent: cyan
-  logo: assets/images/TxFlow_Geometric_Logo_Icon_White_on_Transparent.png
-  favicon: assets/images/TxFlow_Geometric_Logo_Icon_100x100.png
+  logo: assets/images/transformationflow/TransformationFlow_Geometric_Logo_Icon_White_on_Transparent.png
+  favicon: assets/images/transformationflow/TransformationFlow_Geometric_Logo_Icon_100x100.png
 
 extra:
   analytics:
@@ -20,5 +20,21 @@ extra:
     link: https://jim-barlow.medium.com/ 
   - icon: fontawesome/solid/paper-plane
     link: mailto:flowfunctions@transformationflow.io
+
+nav:
+  - Introduction: 'index.md'
+  - Framework:
+    - Overview: 'blank.md'
+    - Philosophy: 'blank.md'
+    - Approach: 'blank.md'
+    - Architecture: 'blank.md'    
+  - Getting Started: 
+    - Authorization: 'blank.md'
+    - Syntax: 'blank.md'
+  - Reference: 
+    - EXECUTE: 'blank.md'
+  - About Us: 
+    - Transformation Flow: 'about-us/transformationflow.md'  
+
 
 copyright: Copyright &copy; 2023 Transformationflow OÜ (16248096), Estonia.
